<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <Button
        android:id="@+id/run_sim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/run_sim" 
        android:onClick="goToRunSimMenu"
        android:layout_below="@+id/mod_fit"/>


    <Button
        android:id="@+id/mod_fit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/mod_fit" 
        android:onClick="goToModFitMenu"/>


    <Button
        android:id="@+id/new_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mod_fit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/new_pop" 
        android:onClick="goToNewPopMenu"/>

</RelativeLayout>